# Mitsuba0.6_CMakeVcpkg

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
cmake/Modules/: FindFFTW3.cmake  Findlibjpeg-turbo.cmake
include/mitsuba/core/: aabb.h  autodiff.h  getopt.h  platform.h  util.h
scenes/: README.md
scenes/cbox_sss/: cbox.xml
scenes/matpreview/: matpreview.xml
scenes/veach_bidir/: bidir.xml
scenes/veach_mi/: mi.xml
scripts/: build-linux.sh  build-macos.sh  build-msys2.sh
src/converter/: CMakeLists.txt  collada.cpp  converter.cpp  mtsimport.cpp  obj.cpp
src/integrators/: CMakeLists.txt
src/libcore/: CMakeLists.txt  bitmap.cpp  logger.cpp  platform_darwin.mm  plugin.cpp  statistics.cpp  thread.cpp  tls.cpp  util.cpp
src/libhw/: CMakeLists.txt  glrenderer.cpp  gltexture.cpp  nsgldevice.mm
src/libpython/: CMakeLists.txt
src/mitsuba/: CMakeLists.txt  mitsuba.cpp  mtssrv.cpp  mtsutil.cpp
src/mtsgui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/shapes/ply/: byte_order.hpp
src/utils/: CMakeLists.txt
