file(GLOB CORE_INC "${MITSUBA_ROOT_DIR}/include/mitsuba/core/*.h" "${MITSUBA_ROOT_DIR}/include/mitsuba/core/*.inl")
file(GLOB CORE_SRC "*.cpp")
if(APPLE)
    file(GLOB CORE_SRC_MM "*.mm")
endif()

add_library(getopt SHARED "${MITSUBA_ROOT_DIR}/include/mitsuba/core/getopt.h" "getopt.c")
target_compile_definitions(getopt PRIVATE -DMTS_BUILD_MODULE=MTS_MODULE_CORE)
add_library(mitsuba-core SHARED ${CORE_INC} ${CORE_SRC} ${CORE_SRC_MM})
target_compile_definitions(mitsuba-core PRIVATE -DMTS_BUILD_MODULE=MTS_MODULE_CORE)
if(APPLE)
    set_source_files_properties(${CORE_SRC_MM} PROPERTIES COMPILE_FLAGS "-fobjc-arc")
    find_library(FOUNDATION_FRAMEWORK Foundation)
    find_library(APPKIT_FRAMEWORK AppKit)
    target_link_libraries(mitsuba-core PRIVATE ${FOUNDATION_FRAMEWORK} ${APPKIT_FRAMEWORK})
    find_library(FFTW3_THREADS_LIB NAMES fftw3_threads HINTS "${FFTW3_LIBRARY_DIRS}")
    if(FFTW3_THREADS_LIB)
        target_link_libraries(mitsuba-core PRIVATE ${FFTW3_THREADS_LIB})
    endif()
endif()
target_link_libraries(mitsuba-core PRIVATE ${BASE_LIB_LIST} ${BOOST_LIB_LIST} ${OPENEXR_LIB_LIST}  ${JEPG_LIB_LIST} ${PNG_LIB_LIST} ${FFTW_LIB_LIST} getopt)
